# black-monks

./: README.md  docker-compose.yml  main.py
black-monks/: Dockerfile  pyproject.toml
black-monks/schemas/: boss.py  character.py  collectableitem.py  enemy.py  item.py  weapon.py
schemas/: hero.py  npc.py
